--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress",
-        "server": "php -S localhost:8888 -t public"
+        "server": "php -S localhost:8888 -t public",
+        "debug": "bin/console debug:router"
     }
 }
