--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "build": "encore production --progress",
         "server": "php -S localhost:8888 -t public",
         "debug": "bin/console debug:router",
-        "sass-b": "sass assets/styles/scss/style.scss assets/styles/app.min.css --no-source-map --style compressed",
-        "sass-w": "sass assets/styles/scss/style.scss assets/styles/app.min.css --no-source-map --style compressed --watch"
+        "sass-b": "sass assets/styles/scss/style.scss assets/styles/app.css --no-source-map --style expanded",
+        "sass-w": "sass assets/styles/scss/style.scss assets/styles/app.css --no-source-map --style expanded --watch",
+        "lint": "stylelint '**/*.scss'; exit 0"
     }
 }
