--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Oljn\\": "src/"
         }
     },
     "autoload-dev": {
