Update of services to exclude own namespace

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,6 +16,9 @@ services:
     App\:
         resource: '../src/'
         exclude:
+            - '../src/Dice/'
+            - '../src/Card/'
+            - '../src/Controller/'
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
