--- a/composer.json
+++ b/composer.json
@@ -60,8 +60,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "Oljn\\": "src/"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
