--- a/.env
+++ b/.env
@@ -15,7 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+# APP_ENV=dev
+APP_ENV="student"
 APP_SECRET=0b00f45ee7064b9bf7bbad394a8b282f
 ###< symfony/framework-bundle ###
 
