--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-# APP_ENV=dev
-APP_ENV="student"
+# APP_ENV=student
+APP_ENV=${APP_ENV:-dev}
 APP_SECRET=0b00f45ee7064b9bf7bbad394a8b282f
 ###< symfony/framework-bundle ###
 
@@ -24,7 +24,7 @@ APP_SECRET=0b00f45ee7064b9bf7bbad394a8b282f
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
@@ -40,3 +40,15 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+
+# # Update these settings for your connection to the student database
+# DATABASE_USER="oljn22"
+# DATABASE_PASSWORD="Ny8vZfVt5Ver"
+# DATABASE_HOST="blu-ray.student.bth.se"
+# DATABASE_PORT="3306"
+# DATABASE_NAME="oljn22"
+# DATABASE_VERSION="10.5.23-MariaDB-0+deb11u1"
+
+# # The database url uses the values from the settings above
+# DATABASE_URL="mysql://%env(DATABASE_USER)%:%env(DATABASE_PASSWORD)%@%env(DATABASE_HOST)%:%env(DATABASE_PORT)%/%env(DATABASE_NAME)%?serverVersion=%env(DATABASE_VERSION)%"
