--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/doctrine-messenger": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/expression-language": "7.0.*",
+        "symfony/flex": "^2",
         "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-client": "7.0.*",
@@ -52,7 +53,8 @@
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "symfony/flex": true
         },
         "sort-packages": true
     },
