Write tests for App\Dice and run phpunit

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,7 +2,7 @@ imports:
     - php
 
 filter:
-    excluded_paths: [vendor/*, test/*, src/Kernel.php, tools/*]
+    excluded_paths: [vendor/*, test/*, src/Kernel.php, tools/*, public/index.php]
 
 build:
     image: default-bionic
