--- a/config/validator/validation.yaml
+++ b/config/validator/validation.yaml
@@ -2,3 +2,6 @@ App\Entity\Player:
     properties:
         name:
             - NotBlank: ~
+            - Length:
+                min: 3
+                minMessage: 'Namnet måste minst vara tre tecken långt!'
