--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,9 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+APP_ENV=test
+APP_DEBUG=1
+
+# Database configuration for testing
+DATABASE_URL="sqlite:///:memory:"
