--- a/composer.json
+++ b/composer.json
@@ -87,12 +87,18 @@
         "phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit",
         "phpmetrics": "tools/phpmetrics/vendor/bin/phpmetrics --config=tools/phpmetrics/phpmetrics.json",
         "make-entity": "php bin/console make:entity",
+        "create-db": "php bin/console doctrine:database:create",
         "make-migration": "php bin/console make:migration",
         "migrate": "php bin/console doctrine:migrations:migrate",
         "lint": [
             "@csfix",
             "@phpmd",
             "@phpstan"
+        ],
+        "setup-database":  [
+            "@create-db",
+            "@make-migration",
+            "@migrate"
         ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
